add tests for getInstituionById